# Docanno-Pre-label

./: README.md  convert_doccano_to_AP.py  labels_not_found.csv  pyproject.toml  removal_log.txt  setup.bat
scripts/: APUtils.py  DoccanoFile.py
scripts/NER/: NERResultFile.py  NERUploadFile.py
