[tool.poetry]
name = "convert_doccano_to_AP"
version = "0.1.0"
description = "Conversion of Doccano NER pre-labeling JSONL files to Annotation Platform JSON input files for Oracle projects."
authors = ["Jari Peräkylä <jari.perakyla@telusinternational.com>", "markus.enkvist <markus.enkvist@telusinternational.com>"]

include = ["convert_doccano_to_AP.py", "setup.bat", "README.md"]
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
